2001-03-06  Nick Clifton  <nickc@redhat.com>

	* elf32-arm.h (elf32_arm_final_link_relocate): Clear bit zero
	of offset in BLX(1) instruction.
	* coff-arm.c (coff_arm_relocate_section): Clear bit zero of
	offset in BLX(1) instruction.
        Fix formatting.

2001-03-06  Nick Clifton  <nickc@redhat.com>

	* coff-arm.c (coff_arm_reloc_type_lookup): Add
	BFD_RELOC_THUMB_PCREL_BLX.

2001-03-06  Igor Shevlyakov  <igor@windriver.com>

	* archures.c (bfd_default_scan): Add Coldfire CPUs.
	* bfd-in2.h: Regenerate.
	* cpu-m68k.c: Add Coldfire CPUs for arch table.
	* ieee.c (ieee_write_processor): Set proper id for
	Coldfire CPUs.

2001-03-01  D.J. Barrow <djbarrow@de.ibm.com,barrow_dj@yahoo.com>

	* configure.in: Add s390 target.
	* configure: Regenerate.

2001-02-28  Andreas Jaeger  <aj@suse.de>

	* elf64-x86-64.c (elf64_x86_64_relocate_section): Add relocation
	to addend.

2001-02-28  Philip Blundell  <pb@futuretv.com>

	* elf32-arm.h: Update mentions of renamed EF_xx constants.
	(elf32_arm_print_private_bfd_data): Handle ARM EABI version 2.

2001-02-27  H.J. Lu  <hjl@gnu.org>

	* aoutx.h (NAME(aout,bfd_free_cached_info)): Return true if
	abfd->tdata.aout_data == NULL.

2001-02-27  Alan Modra  <alan@linuxcare.com.au>

	* elf32-hppa.c: Correct field selector in stub comments.
	(clobber_millicode_symbols): Formatting fix.

	* configure.in: Bump version to 2.11.90.
	* configure: Regenerate.
	* Makefile.am (CFILES): Rename to SOURCE_CFILES.
	(CFILES): $SOURCE_CFILES + generated C files.
	(POTFILES): Include $HFILES not $SOURCE_HFILES.
	Run "make dep-am"
	* Makefile.in: Regenerate.
	* doc/Makefile.in: This too.

2001-02-26  Timothy Wall  <twall@cygnus.com>

	* elfxx-ia64.c (elfNN_ia64_aix_add_symbol_hook): Remove obsolete
	comments.

2001-02-26  Nick Clifton <nickc@redhat.com>

	* coffcode.h (styp_to_sec_flags) [COFF_WITH_PE version]: Tidy
	up, replacing multiple if statements with a switch.
        (handle_COMDAT): New function.

2001-02-26  H.J. Lu  <hjl@gnu.org>
